[package]
name = "rattle_items_match"
version = "0.1.6"
authors = ["むずでょ <muzudho1@gmail.com>"]
edition = "2018"
description = """
Matching is not limited to character strings. I'm trying to make a game AI.
"""
readme = "README.md"
repository = "https://github.com/muzudho/rattle-items-match"
license = "MIT"
keywords = ["parser"]
categories = ["parsing"]
exclude = ["doc/*", "examples/*", "resource/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# look_ahead_items = "0.1.1"
